--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-01-23  Roland McGrath  <roland@baalperazim.frob.com>
+
+	* sysdeps/gnu/errlist.awk: Add comment.
+
 1999-01-23  Ulrich Drepper  <drepper@cygnus.com>
 
 	* csu/Versions: Add __register_frame_info_table.
