--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-01-27  Ulrich Drepper  <drepper@cygnus.com>
 
+	* wctype/wcextra.c: Declare __ctype32_b.
+
 	* manual/string.texi: Add optimization examples for strcat and strchr.
 
 1999-01-26  Ulrich Drepper  <drepper@cygnus.com>
