--- a/manual/time.texi
+++ b/manual/time.texi
@@ -1331,12 +1331,12 @@ matched to the format string the function stops.  The remainder of the
 format and input strings are not processed.
 
 The return value of the function is a pointer to the first character not
-processed in this function call.  In the case of an error the return
-value points to the first character not matched.  In case the input
-string contains more than required by the format string the return value
-points right after the last consumed input character.  In case the whole
-input string is consumed the return value points to the NUL byte at the
-end of the string.
+processed in this function call.  In case the input string contains more
+characters than required by the format string the return value points
+right after the last consumed input character.  In case the whole input
+string is consumed the return value points to the NUL byte at the end of
+the string.  If @code{strptime} fails to match all of the format string
+and therefore an error occurred the function returns @code{NULL}.
 @end deftypefun
 
 The specification of the function in the XPG standard is rather vague.
