--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-01-28  Ulrich Drepper  <drepper@cygnus.com>
+
+	* iconv/gconv_db.c (free_mem): Don't free module tree if there is none.
+
 1999-01-27  Ulrich Drepper  <drepper@cygnus.com>
 
 	* locale/programs/locale-spec.c (locale_special): Take care of
