--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-01-28  Ulrich Drepper  <drepper@cygnus.com>
 
+	* iconv/gconv_dl.c: Unload all modules when debugging memory use.
+
 	* locale/loadlocale.c (_nl_unload_locale): Free locale name.
 
 	* intl/finddomain.c (free_mem): Also free filename.
