--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 1999-01-28  Ulrich Drepper  <drepper@cygnus.com>
 
+	* locale/setlocale.c (free_mem): Don't try to free C locale data
+	and use setdata instead of doing it by hand.
+
+	* iconv/gconv_conf.c (add_alias): Check that so such alias is
+	currently stored.
+
+	* iconv/gconv_db.c (free_derivation): Free names if charsets for
+	first and last step.
+
 	* iconv/gconv_dl.c: Unload all modules when debugging memory use.
 
 	* locale/loadlocale.c (_nl_unload_locale): Free locale name.
